fix : order details ui breaking on mobile devices

--- a/src/components/order-details/order-details.scss
+++ b/src/components/order-details/order-details.scss
@@ -84,7 +84,8 @@
     &__payment__method, &__address {
         text-transform: uppercase;
         font-weight:bold;
-
+        display: flex;
+        flex-direction: column;
         span {
             color: grey;
             font-size: .925rem;
